 - instanciation/suppression de composants depuis l'interface d'administration (avant, ça ne se faisait que par  inclusion dans les squelettes)

Modele Cat pour ACS vesion 0.6:
 - Recherche : suppression du test de la variable meta "activer_moteur" (disparue en spip 2)
 - Banniere : ajout du lien extra, option d'alignement vertical
 - Bandeau : choix de la taille du texte
 - Module : gestion des instances de composants
_______________________________________
ACS version 0.5
 - installation simplifiee et amelioree. Installation des images par defaut des composants.
 - nombre d'instances de chaque composant affiche en info-bulle sur les widgets de l'onglet "Composants".
 - nouvelles traductions generiques.
 - controles revus. Composants ordonnés par ordre alphabetique dans le contrôle Widget.
 - nouvelle balise de mise en page <admin> pour masquer des parties de mises en page de composant en mode pinceau
 - nouvelle balise #VAR{variable, valeur par defaut} : lorsque la valeur de variable est un nom de variable ACS, ce nom est remplacé par sa valeur à l'execution (permet l'héritage de variables de composants).
 - creation du controle de type Bord pour définir largeur, style, et couleur de bordure en une fois.
 - gestion des CSS d'instances de composants par fichier composant_instances.css.html contenant la balise #NIC.
 - amelioration des performances du cache.
 
Modele Cat pour ACS vesion 0.5:
 - Composant Agenda : amélioration CSS. Tri par heure des articles publies/modifies/breves dans l'info-bulle. Encapsulation des styles css dans la classe cAgenda. Bulle d'aide. masquage des redirections d'articles SPIP.
 - Composant Articles : meilleure integration avec plugin notation (0.6.3) et composant Democratie. Variables liees au plan deplacees vers le composant rubriques.
 - Composant Agenda : images dans IMG/_acs/
 - Composant Audio : pagination ajax.
 - Composant Breves : feuille de style personnalisable indépendante.