@@ -38,11 +38,12 @@ if (find_in_path($fond)) {
 }
 ?>
 </head>
-<body><?php
+<body>
+<?php
 // Use preview if exist, or component itself if not.
 $p = find_in_path($_GET['c'].'_preview.html');
 if ($p) : ?><INCLURE{fond=#EVAL{$_GET['c'].'_preview'}}{c}>
-<?php else : ?><INCLURE{fond=#ENV{c}}{self=#SELF}{env=#ENV}>
+<?php else : ?><INCLURE{fond=#ENV{c}}{self=#SELF}{env=#ENV} {nic=#ENV{nic}}>
 <?php endif; ?>
 </body>
 </html>
